cloudformation/apps/author-publish-dispatcher/author-publish-dispatcher.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: Create the Compute resources for the AEM Author Publish Dispatcher

Parameters:

  ComputeStackPrefixParameter:
    Type: String
    Description: The AEM Stack Compute Resources Stack Prefix

  AuthorPublishDispatcherImageParameter:
    Type: AWS::EC2::Image::Id
    Description: AMI Id used for the Host

  AuthorPublishDispatcherImageRootDevice:
    Type: String
    Description: The root device name for the Author Publish Dispatcher Image Id
    Default: /dev/sda1

  AuthorPublishDispatcherInstanceTypeParameter:
    Type: String
    Description: The Author Publish Dispatcher Instance Type

  AuthorPublishDispatcherInstanceProfilePre:
    Type: String
    Description: The Author Publish Dispatcher pre-created Instance Profile

  AuthorPublishDispatcherSecurityGroupParameter:
    Type: String
    Description: The Author Publish Dispatcher default Security Group Id

  InboundFromBastionHostSecurityGroupParameter:
    Type: String
    Description: Inbound Bound from Bastion Host Security Group Id

  ComputeKeyPairNameParameter:
    Type: AWS::EC2::KeyPair::KeyName
    Description: The Compute Resources Key Pair Name

  AuthorPublishDispatcherRootVolSizeParameter:
    Type: Number
    Description: Author Publish Dispatcher Instances Root EBS Volume Size

  AuthorPublishDispatcherDataVolSizeParameter:
    Type: Number
    Description: Author Publish Dispatcher Instances Data EBS Volume Size

  VPCId:
    Type: AWS::EC2::VPC::Id
    Description: The VPC that the Host will reside

  AuthorPublishDispatcherSubnet:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet Ids the Host Will be Launched into

  DataBucketNameParameter:
    Type: String
    Description: Bucket name that stores Stack data files

  AemAwsStackProvisionerVersionParameter:
    Type: String
    Description: AEM AWS Stack Provisioner version number

  AssociatePublicIpAddressParameter:
    Type: String
    Description: Add Public IP Address to instance

  Route53HostedZoneNameParameter:
    Type: String
    Description: Route53 Hosted Zone Name the Record Set will be Created in

  AuthorPublishDispatcherDNSRecordSetNamePrefixParameter:
    Type: String
    Description: Author Publish Dispatcher DNS Record Set Prefix Name

  AuthorPublishDispatcherDNSRecordSetNameSuffixParameter:
    Type: String
    Description: Author Publish Dispatcher DNS Record Set Suffix Name

  DNSRecordSetTTL:
    Type: String
    Description: Record Set TTL value

Conditions:
  CreateInstanceProfileCondition:
    Fn::Equals:
    - Ref: AuthorPublishDispatcherInstanceProfilePre
    - NONE

Resources:

  # AuthorPublishDispatcher Security Group
  AuthorPublishDispatcherSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: AuthorPublishDispatcher Security Group
      Tags:
      - Key: Name
        Value: AEM Author Publish Dispatcher Security Group
      - Key: StackPrefix
        Value:
          Ref: ComputeStackPrefixParameter
      VpcId:
        Ref: VPCId

  # Allow tcp on ports 80
  AuthorPublishDispatcherSecurityGroupIngress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp: 0.0.0.0/0
      FromPort: '80'
      GroupId:
        Ref: AuthorPublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '80'

  # Allow tcp on ports 443
  AuthorPublishDispatcherSecurityGroupIngress2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp: 0.0.0.0/0
      FromPort: '443'
      GroupId:
        Ref: AuthorPublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '443'

  # Allow tcp on ports 4502, 4503
  AuthorPublishDispatcherSecurityGroupIngress3:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp: 0.0.0.0/0
      FromPort: '4502'
      GroupId:
        Ref: AuthorPublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '4503'

  # Allow tcp on ports 5432, 5433
  AuthorPublishDispatcherSecurityGroupIngress4:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp: 0.0.0.0/0
      FromPort: '5432'
      GroupId:
        Ref: AuthorPublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '5433'

  AuthorPublishDispatcherRole:
    Type: AWS::IAM::Role
    Condition: CreateInstanceProfileCondition
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: /
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
      Policies:
      - PolicyName: AuthorPublishDispatcherRolePolicy
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
            - Effect: Allow
              Action:
                - ec2:Describe*
                - ec2:CreateTags
                - ec2:AttachVolume
                - ec2:CreateVolume
                - ec2:DetachVolume
                - ec2:CreateSnapshot
                - ec2:ModifyInstanceAttribute
                - autoscaling:CreateLaunchConfiguration
                - autoscaling:DescribeLaunchConfigurations
                - autoscaling:UpdateAutoScalingGroup
                - autoscaling:CreateOrUpdateTags
                - cloudwatch:PutMetricData
              Resource: "*"
            - Effect: Allow
              Action:
                - s3:Get*
                - s3:List*
                - s3:Put*
              Resource: "*"
            - Effect: Allow
              Action:
                - logs:*
              Resource:
                - arn:aws:logs:*:*:*
      RoleName:
        Fn::Sub: ${ComputeStackPrefixParameter}-AuthorPublishDispatcherStackPublishRole

  AuthorPublishDispatcherInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Condition: CreateInstanceProfileCondition
    Properties:
      Path: /
      Roles:
      - Ref: AuthorPublishDispatcherRole

  AuthorPublishDispatcherInstance:
    Type: AWS::EC2::Instance
    Properties:
      BlockDeviceMappings:
      - DeviceName:
          Ref: AuthorPublishDispatcherImageRootDevice
        Ebs:
          DeleteOnTermination: true
          VolumeSize:
            Ref: AuthorPublishDispatcherRootVolSizeParameter
          VolumeType: gp2
      - DeviceName: /dev/sdb
        Ebs:
          DeleteOnTermination: true
          VolumeSize:
            Ref: AuthorPublishDispatcherDataVolSizeParameter
          VolumeType: gp2
      - DeviceName: /dev/sdc
        Ebs:
          DeleteOnTermination: true
          VolumeSize:
            Ref: AuthorPublishDispatcherDataVolSizeParameter
          VolumeType: gp2
      IamInstanceProfile:
        Fn::If:
        - CreateInstanceProfileCondition
        - Ref: AuthorPublishDispatcherInstanceProfile
        - Ref: AuthorPublishDispatcherInstanceProfilePre
      ImageId:
        Ref: AuthorPublishDispatcherImageParameter
      InstanceType:
        Ref: AuthorPublishDispatcherInstanceTypeParameter
      KeyName:
        Ref: ComputeKeyPairNameParameter
      NetworkInterfaces:
      - AssociatePublicIpAddress:
          Ref: AssociatePublicIpAddressParameter
        DeviceIndex: '0'
        GroupSet:
        - Ref: AuthorPublishDispatcherSecurityGroupParameter
        - Ref: AuthorPublishDispatcherSecurityGroup
        - Ref: InboundFromBastionHostSecurityGroupParameter
        SubnetId:
          Ref: AuthorPublishDispatcherSubnet
      Tags:
      - Key: StackPrefix
        Value:
          Ref: ComputeStackPrefixParameter
      - Key: Name
        Value: AuthorPublishDispatcher
      - Key: Component
        Value: author-publish-dispatcher
      UserData:
        Fn::Base64:
          Fn::Sub: "#!/bin/bash -x\n source /etc/profile\n mkdir -p /opt/shinesolutions/aem-aws-stack-builder/\n\
            \ aws s3 cp s3://${DataBucketNameParameter}/${ComputeStackPrefixParameter}/stack-init.sh\
            \ /opt/shinesolutions/aem-aws-stack-builder/stack-init.sh\n chmod 755\
            \ /opt/shinesolutions/aem-aws-stack-builder/stack-init.sh\n /opt/shinesolutions/aem-aws-stack-builder/stack-init.sh\
            \ ${DataBucketNameParameter} ${ComputeStackPrefixParameter} author-publish-dispatcher\
            \ ${AemAwsStackProvisionerVersionParameter}\n"

  AuthorPublishDispatcherRoute53RecordSet:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName:
        Ref: Route53HostedZoneNameParameter
      Name:
        Fn::Sub: ${AuthorPublishDispatcherDNSRecordSetNamePrefixParameter}${ComputeStackPrefixParameter}${AuthorPublishDispatcherDNSRecordSetNameSuffixParameter}.${Route53HostedZoneNameParameter}
      ResourceRecords:
      - Fn::GetAtt: [AuthorPublishDispatcherInstance, PrivateIp]
      TTL:
        Ref: DNSRecordSetTTL
      Type: A
