cloudformation/apps/author-publish-dispatcher/prerequisites.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: Create the Compute resources for the AEM Author Publish Dispatcher

Parameters:

  ComputeStackPrefixParameter:
    Type: String
    Description: The AEM Stack Compute Resources Stack Prefix

  VPCId:
    Type: AWS::EC2::VPC::Id
    Description: The VPC that the Host will reside


Resources:

  # AuthorPublishDispatcher Security Group
  AuthorPublishDispatcherSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: AuthorPublishDispatcher Security Group
      Tags:
      - Key: Name
        Value: AEM Author Publish Dispatcher Security Group
      - Key: StackPrefix
        Value:
          Ref: ComputeStackPrefixParameter
      VpcId:
        Ref: VPCId

  # Allow tcp on ports 80
  AuthorPublishDispatcherSecurityGroupIngress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp: 0.0.0.0/0
      FromPort: '80'
      GroupId:
        Ref: AuthorPublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '80'

  # Allow tcp on ports 443
  AuthorPublishDispatcherSecurityGroupIngress2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp: 0.0.0.0/0
      FromPort: '443'
      GroupId:
        Ref: AuthorPublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '443'

  # Allow tcp on ports 4502, 4503
  AuthorPublishDispatcherSecurityGroupIngress3:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp: 0.0.0.0/0
      FromPort: '4502'
      GroupId:
        Ref: AuthorPublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '4503'

  # Allow tcp on ports 5432, 5433
  AuthorPublishDispatcherSecurityGroupIngress4:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      CidrIp: 0.0.0.0/0
      FromPort: '5432'
      GroupId:
        Ref: AuthorPublishDispatcherSecurityGroup
      IpProtocol: tcp
      ToPort: '5433'

Outputs:

  AuthorPublishDispatcherSecurityGroup:
    Value:
      Ref: AuthorPublishDispatcherSecurityGroup
    Description: The Author Publish Dispatcher Security Group
    Export:
      Name:
        Fn::Sub: ${ComputeStackPrefixParameter}-AuthorPublishDispatcherSecurityGroup
